Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68350

QQmlApplicationEngine::retranslate do not work for strings in ListView/ListElement

XMLWordPrintable

      When having the qsTr() within a ListModel inside a ListElement the qsTr() is not reevaluated when running QQmlApplicationEngine::retranslate

      You can test it with the project I have attached in a 7zip

      BugTest.7z

       

      shausman let me know if you need more info

       

        1. BugTest.7z
          2 kB
          Fredrik Lundberg
        For Gerrit Dashboard: QTBUG-68350
        # Subject Branch Project Status CR V

            shausman Simon Hausmann
            fredro Fredrik Lundberg
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes