tests/auto/qml/qqmltranslation/data/translationChange.qml
@@ -3,6 +3,13 @@ import QtQuick 2.0
 TranslationChangeBase {
     id: root
 
+    ListModel {
+        id: listModel
+        ListElement {
+            text: qsTr("translate me")
+        }
+    }
+
     baseProperty: "do not translate"
     property string text1: qsTr("translate me")
     function weDoTranslations() {
@@ -10,6 +17,7 @@ TranslationChangeBase {
     }
     property string text2: weDoTranslations()
     property string text3
+    property string fromListModel: listModel.get(0).text
 
     states: [
         State {
